# holmes

./: CHANGELOG.md  LICENSE  README.lhs  holmes.cabal
docs/: Futoshiki.lhs  Main.lhs  Parameters.lhs  Practices.lhs  Predicates.lhs  Programs.lhs  WaveFunctionCollapse.lhs  index.html
examples/: Futoshiki.hs  Issue14.hs  WaveFunctionCollapse.hs
src/: Scratch.hs
src/Control/Monad/: Holmes.hs  MoriarT.hs  Watson.hs
src/Control/Monad/Cell/: Class.hs
src/Data/: CDCL.hs  Holmes.hs  Propagator.hs
src/Data/Input/: Config.hs
src/Data/JoinSemilattice/: Defined.hs  Intersect.hs
src/Data/JoinSemilattice/Class/: Abs.hs  Boolean.hs  Eq.hs  FlatMapping.hs  Fractional.hs  Integral.hs  Lifting.hs  Mapping.hs  Merge.hs  Ord.hs  Sum.hs  Zipping.hs
test/Test/Control/Monad/Cell/: Class.hs
test/Test/Data/: Propagator.hs
test/Test/Data/Input/: Config.hs
test/Test/Data/JoinSemilattice/: Defined.hs  Intersect.hs
test/Test/Data/JoinSemilattice/Class/: Abs.hs  Boolean.hs  Eq.hs  Fractional.hs  Integral.hs  Ord.hs  Sum.hs
test/Test/Regression/: Issue7.hs
test/Test/Util/: Laws.hs
