cabal-version:       2.4

author:             Tom Harding
build-type:         Simple
category:           Data
extra-source-files: README.md
homepage:           https://github.com/i-am-tom/holmes/
license-file:       LICENSE
license:            MIT
maintainer:         i.am.tom.harding@gmail.com
name:               holmes
description:        A reference library for constraint-solving with propagators and CDCL.
synopsis:           Tools and combinators for solving constraint problems.
version:            0.2.0.0

library
  exposed-modules: Control.Monad.Cell.Class
                 , Control.Monad.Holmes
                 , Control.Monad.MoriarT
                 , Control.Monad.Watson
                 , Data.Input.Config
                 , Data.JoinSemilattice.Defined
                 , Data.JoinSemilattice.Intersect
                 , Data.Propagator
                 , Data.Holmes

  other-modules: Data.JoinSemilattice.Class.Abs
               , Data.JoinSemilattice.Class.Boolean
               , Data.JoinSemilattice.Class.Eq
               , Data.JoinSemilattice.Class.FlatMapping
               , Data.JoinSemilattice.Class.Fractional
               , Data.JoinSemilattice.Class.Integral
               , Data.JoinSemilattice.Class.Mapping
               , Data.JoinSemilattice.Class.Merge
               , Data.JoinSemilattice.Class.Ord
               , Data.JoinSemilattice.Class.Sum
               , Data.JoinSemilattice.Class.Zipping
               , Data.CDCL

  build-depends: base >= 4.12 && < 4.14
               , containers >= 0.6 && < 0.7
               , hashable >= 1.3 && < 1.4
               , hedgehog >= 1.0 && < 1.1
               , logict >= 0.7 && < 0.8
               , mtl >= 2.2 && < 2.3
               , primitive >= 0.7 && < 0.8
               , transformers >= 0.5 && < 0.6
               , unordered-containers >= 0.2 && < 0.3

  ghc-options: -Wall -Wextra
  hs-source-dirs: src
  default-language: Haskell2010

--------------------------------------------------
-- EXAMPLE PROJECTS

test-suite examples
  type:     exitcode-stdio-1.0
  main-is:  Main.hs

  build-depends: base
               , hashable >= 1.3 && < 1.4
               , holmes
               , hspec >= 2.7 && < 2.8
               , split >= 0.2 && < 0.3
               , unordered-containers >= 0.2 && < 0.3
               , relude >= 0.6 && < 0.7
               , tasty >= 1.2 && < 1.3
               , tasty-discover
               , tasty-hspec

  other-modules: Futoshiki
               , WaveFunctionCollapse

  ghc-options: -Wall -Wextra -threaded
  hs-source-dirs: examples
  build-tool-depends: tasty-discover:tasty-discover
  default-language: Haskell2010

--------------------------------------------------
-- UNIT TESTS

test-suite test
  type:     exitcode-stdio-1.0
  main-is:  Main.hs

  build-depends: base
               , containers >= 0.6 && < 0.7
               , hashable >= 1.3 && < 1.4
               , hedgehog >= 1.0 && < 1.1
               , holmes
               , primitive >= 0.7 && < 0.8
               , transformers >= 0.5 && < 0.6
               , tasty >= 1.2 && < 1.3
               , tasty-discover
               , tasty-hedgehog
               , tasty-hspec

  other-modules: Test.Control.Monad.Cell.Class
               , Test.Data.Input.Config
               , Test.Data.JoinSemilattice.Class.Abs
               , Test.Data.JoinSemilattice.Class.Boolean
               , Test.Data.JoinSemilattice.Class.Eq
               , Test.Data.JoinSemilattice.Class.Fractional
               , Test.Data.JoinSemilattice.Class.Integral
               , Test.Data.JoinSemilattice.Class.Ord
               , Test.Data.JoinSemilattice.Class.Sum
               , Test.Data.JoinSemilattice.Defined
               , Test.Data.JoinSemilattice.Intersect
               , Test.Data.Propagator
               , Test.Util.Laws

  ghc-options: -Wall -Wextra -threaded
  hs-source-dirs: test
  build-tool-depends: markdown-unlit:markdown-unlit
                    , tasty-discover:tasty-discover
  default-language: Haskell2010

--------------------------------------------------
-- LITERATE HASKELL README / HSPEC RUNNER

test-suite readme
  build-depends: base
               , hashable >= 1.3 && < 1.4
               , holmes
               , hspec >= 2.7 && < 2.8
  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -pgmL markdown-unlit -Wall
  build-tool-depends:  markdown-unlit:markdown-unlit
